2006-03-13  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: don't create target file if source does not exist.
	* Job.cc: don't delete killed job right not; CollectGarbage after
	  KillAll or Cleanup, don't delete the jobs in loop.
	* Job.h: make Kill and KillAll static; add Cleanup method.
	* commands.cc: show done jobs before exit.
	* lftp.cc: do Job::Cleanup before termination.
	* resource.cc: change http:use-propfind default to no.

2006-02-16  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc, FileAccess.h: Close session in Chdir, VerifyPath
	  (fixed coredump).
	* LsCache.cc: avoid Chdir, as it Closes session.
	* FileCopy.cc: use SMTask ref count.
	* SMTask.cc, SMTask.h: (ref_count) new member.
	* ftpclass.cc: remove unneeded abort().

2006-02-14  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed condition when exact time is needed for cls.

2006-02-08  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed a stupid bug with cls (time-style).
	* resource.cc: assign env TIME_STYLE to cmd:time-style.

2006-02-06  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSetOutput.cc, commands.cc: add cmd:time-style setting.

2006-01-23  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc, Http.h: use PROPFIND for cd check before HEAD.

2006-01-15  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSetOutput.cc, FileSetOutput.h, commands.cc: add cls --time-style
	  option.

2006-01-12  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: fixed an abortion when cmd:remote-completion is false.
	* lftp_ssl.cc: don't do shutdown/bye, as it makes problems with CCC.
	* Makefile.am: use automake conditionals to select modules to build.

2005-12-28  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, Filter.cc, Fish.cc, FtpListInfo.cc, Http.cc, HttpDir.cc,
	  ftpclass.cc, keyvalue.cc: handle return values (fix warnings).
	* Makefile.am: install shared libs liblftp-tasks and liblftp-jobs;